# chat

./: CMakeLists.txt
Client/: CMakeLists.txt  Client.pro  Commands  cclient.cpp  cclient.h  cdefines.h  cmain.cpp  cserver.cpp  cserver.h  cutils.cpp  cutils.h  cwgt.cpp  cwgt.h  cwroom.cpp  cwroom.h  res.qrc
Server/: CMakeLists.txt  Server.pro  sclients.cpp  sclients.h  sconnect.cpp  sconnect.h  sdefines.h  smain.cpp  sserver.cpp  sserver.h  sutils.cpp  sutils.h  swgt.cpp  swgt.h
