cmake_minimum_required(VERSION 3.3)
project(IRC)

MACRO(M_SET_BUILD_DIR M_DIR)
	set(EXECUTABLE_OUTPUT_PATH ${M_DIR} CACHE PATH "Build directory" FORCE)
	set(LIBRARY_OUTPUT_PATH ${M_DIR} CACHE PATH "Build directory" FORCE)
	set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${M_DIR})
	set(CMAKE_BUILD_FILES_DIRECTORY ${M_DIR})
	set(CMAKE_BUILD_DIRECTORY ${M_DIR})
	set(CMAKE_BINARY_DIR ${M_DIR})
	set(EXECUTABLE_OUTPUT_PATH ${M_DIR})
	set(LIBRARY_OUTPUT_PATH ${M_DIR}lib)
	set(CMAKE_CACHEFILE_DIR ${M_DIR})
ENDMACRO(M_SET_BUILD_DIR)
M_SET_BUILD_DIR(D:/GameTmp/)

set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_CXX_FLAGS "-std=c++11")

find_package(Qt5Core)
find_package(Qt5Widgets)
find_package(Qt5Network)
find_package(Qt5Declarative)

add_subdirectory(Client)
add_subdirectory(Server)
